cros: Fix mute shelf icon color in OOBE

Bug: 877047
Change-Id: If77842d8f90cfc0a09420c82745d82a1b0a2030d
Reviewed-on: https://chromium-review.googlesource.com/1187407
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585875}
Former-commit-id: 5136d3532bd49f578b03272670914474e7a9febb